<resources>
    <string name="app_name">GamingWakeUp</string>
    <string name="time_format">%1$02d:%2$02d</string>
    <string name="create_alarm">Create New Alarm</string>
    <string name="form_vibration_label">Vibration</string>
    <string name="form_sound_volume_label">Volume</string>
    <string name="form_button_text">Save</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="toolbar_title_edit_alarm">Edit Alarm</string>
    <string name="toolbar_title_create_alarm">Create Alarm</string>
    <string name="toolbar_title_sound_setting">Sound Setting</string>
    <string name="game_description_number_in_order">Tap the numbers in order!</string>
    <string name="game_number_in_order_button_number_9">9</string>
    <string name="game_number_in_order_button_number_8">8</string>
    <string name="game_number_in_order_button_number_7">7</string>
    <string name="game_number_in_order_button_number_6">6</string>
    <string name="game_number_in_order_button_number_5">5</string>
    <string name="game_number_in_order_button_number_4">4</string>
    <string name="game_number_in_order_button_number_3">3</string>
    <string name="game_number_in_order_button_number_2">2</string>
    <string name="game_number_in_order_button_number_1">1</string>
    <string name="recurringCheckboxLabel">Repeat</string>
    <string name="mondayRecurringButtonText">M</string>
    <string name="tuesdayRecurringButtonText">T</string>
    <string name="wednesdayRecurringButtonText">W</string>
    <string name="thursdayRecurringButtonText">T</string>
    <string name="fridayRecurringButtonText">F</string>
    <string name="saturdayRecurringButtonText">S</string>
    <string name="sundayRecurringButtonText">S</string>
    <string name="default_annotation">(Default)</string>
</resources>
