<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10:25" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="32dp"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentTime" />

        <TextView
            android:id="@+id/game_desctiption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/game_description_number_in_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:columnCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_desctiption"
            app:rowCount="3">

            <Button
                style="@style/NumberButton"
                android:id="@+id/gameNumberInOrderButton1"
                android:text="@string/game_number_in_order_button_number_1"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                style="@style/NumberButton"
                android:id="@+id/gameNumberInOrderButton2"
                android:text="@string/game_number_in_order_button_number_2"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                style="@style/NumberButton"
                android:id="@+id/gameNumberInOrderButton3"
                android:text="@string/game_number_in_order_button_number_3"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                style="@style/NumberButton"
                android:id="@+id/gameNumberInOrderButton4"
                android:text="@string/game_number_in_order_button_number_4"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                style="@style/NumberButton"
                android:id="@+id/gameNumberInOrderButton5"
                android:text="@string/game_number_in_order_button_number_5"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                style="@style/NumberButton"
                android:id="@+id/gameNumberInOrderButton6"
                android:text="@string/game_number_in_order_button_number_6"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                style="@style/NumberButton"
                android:id="@+id/gameNumberInOrderButton7"
                android:text="@string/game_number_in_order_button_number_7"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                style="@style/NumberButton"
                android:id="@+id/gameNumberInOrderButton8"
                android:text="@string/game_number_in_order_button_number_8"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                style="@style/NumberButton"
                android:id="@+id/gameNumberInOrderButton9"
                android:text="@string/game_number_in_order_button_number_9"
                app:layout_column="2"
                app:layout_row="2" />
        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
